--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>saurabh Jha </title>
+    <title>saurabh Jha</title>
     <link rel="stylesheet" href="Style3.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
             i can't express so i made <br />
             this for you
           </p>
-          <a href="new.html">Click here</a>
+          <a href="./news.html">Click here</a>
         </div>
       </div>
       <div class="front"></div>
